--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "remark-frontmatter": "^4.0.1",
     "remark-lint-frontmatter-schema": "^3.10.1",
     "remark-preset-lint-consistent": "^5.1.1",
+    "remark-preset-lint-markdown-style-guide": "^5.1.2",
     "remark-preset-lint-recommended": "^6.1.2"
   }
 }
